testsuite/tests/typecheck/no_skolem_info/KcConDeclSkolem2.hs
{-# LANGUAGE GADTs, DataKinds, PolyKinds #-}

module KcConDeclSkolem2 where

import Data.Kind
import Data.Proxy

data D a = MkD (a a)
